umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_Query_for_check.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 0"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C54BFNOS+2
    atom_count: 61
    bond_count: 60
    extended_atoms: 2
    extended_bonds: 5
    property_count: 1
    rgroup_count: 0
    sgroup_count: 2
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C54BFNOS+2
    atom_count: 61
    bond_count: 60
    extended_atoms: 2
    extended_bonds: 5
    property_count: 1
    rgroup_count: 0
    sgroup_count: 2
